# kaldi-grpc-server

./: .gitignore  Dockerfile  Makefile  README.md  compute_wer.sh  generate_stubs.sh  pyproject.toml  transcribe_folder.sh  transcription_folder_to_sclite_hyp.py
client/: README.md  pyproject.toml
client/kaldigrpc_client/: __init__.py  client.py
docker-pykaldi/: Dockerfile  install_clif.sh  install_protobuf.sh
generated_langs/js/: README.md  asr_grpc_web_pb.js  asr_pb.js
generated_langs/ruby/: asr_pb.rb  asr_services_pb.rb
kaldigrpc/: client.py  config.py  recognize.py  server.py
kaldigrpc/cli/: client.py
protos/: asr.proto
server/: Dockerfile  README.md  asr-singularity.def  build-docker.sh  build-singularity.sh  pyproject.toml
server/chime6_example/: reset.sh  setup.sh
server/chime6_example/model/: words.txt
server/chime6_example/model/conf/: ivector_extractor.conf  mfcc.conf  online.conf
server/chime6_example/model/ivector_extractor/: final.dubm  final.mat  global_cmvn.stats
server/kaldigrpc/: config.py  diarize.py  recognize.py  segment.py  server.py  timeout_iterator.py  util.py  wav.py
server/kaldigrpc/cli/: recognize.py  serve.py
server/scripts/: cluster.py  make_rttm.py  plda.py  setup_SAD.sh  setup_chime6.sh  setup_diarizer.sh  split_wav.py  vad.py  xvectors.py
