[tool.poetry]
name = "kaldigrpc"
version = "0.1.0"
description = ""
authors = ["Giorgos Paraskevopoulos <geopar@central.ntua.gr>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.39.0"
grpcio-tools = "^1.39.0"
pydub = "^0.25.1"
numpy = "^1.21.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
mypy = "^0.910"

[tool.poetry.scripts]
kaldigrpc-serve = 'kaldigrpc.cli.serve:serve_cli'
kaldigrpc-transcribe = 'kaldigrpc.cli.client:transcribe_wav_cli'
kaldigrpc-transcribe-local = 'kaldigrpc.cli.recognize:local_transcribe_wav_cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
